--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.html
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.html
@@ -27,7 +27,7 @@
           </mat-form-field>
           <section class="controls">
               <mat-checkbox  class="remember-me" formControlName="foreignComp">{{'auth-page.login.alient-pc' | translate}}</mat-checkbox>
-              <a [routerLink]="['/auth/reset-pass' | localize ]">Н{{'auth-page.login.forgot-pass' | translate}}</a>
+              <a [routerLink]="['/auth/reset-pass' | localize ]">{{'auth-page.login.forgot-pass' | translate}}</a>
           </section>
 
           <section  class="submit">
