--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -8,11 +8,11 @@
 
     <form  #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
     <div class="form-group">
-      <label for="email">Введите e-mail</label>
+      <label for="email">{{'auth-page.login.put-mail' | translate}}</label>
       <input type="email" placeholder="E-mail Address" id="email" formControlName="email" emailvalidator name="email" required >
       <div class="form-controll-feedback" *ngIf="resetPass.get('email').invalid">
-        <p *ngIf="resetPass.get('email').hasError('required') && submitted">Введите email</p>
-        <p *ngIf="resetPass.get('email').invalid && submitted">Не корректный email</p>
+        <p *ngIf="resetPass.get('email').hasError('required') && submitted">{{'auth-page.login.put-mail' | translate}}</p>
+        <p *ngIf="resetPass.get('email').invalid && submitted">{{'auth-page.login.wrong-mail' | translate}}</p>
       </div>
     </div>
     <button class="btn" type="submit" [disabled]="form.invalid">
