--- a/src/app/chat/components/messenger/messenger.component.scss
+++ b/src/app/chat/components/messenger/messenger.component.scss
@@ -59,6 +59,7 @@
       &>div:first-of-type {
         display: flex;
         flex-direction: row;
+        align-items: center;
 
         &>div {
           margin-right: 20px;
@@ -67,7 +68,7 @@
 
       .file {
         position: relative;
-        height: 20px;
+        height: 30px;
         cursor: pointer;
 
         &:before {
