--- a/src/app/chat/components/upload-file/upload-file.component.scss
+++ b/src/app/chat/components/upload-file/upload-file.component.scss
@@ -156,6 +156,8 @@ input[type="file"] {
             display: flex;
             flex-direction: column;
             width: 100%;
+            position: relative;
+            overflow: hidden;
             p {
                 margin: 0;
             }
@@ -178,6 +180,24 @@ input[type="file"] {
             .stripes {
                 background-size: 30px 30px;
                 background-image: linear-gradient( 135deg, rgba(60, 156, 234, 0.45) 25%, transparent 25%, transparent 50%, rgba(60, 156, 234, 0.45) 50%, rgba(60, 156, 234, 0.45) 75%, transparent 75%, transparent);
+            }
+            .delete-file {
+              width: 20px;
+              height: 20px;
+              position: absolute;
+              right: 10px;
+              display: block;
+              cursor: pointer;
+              &:before {
+                position: absolute;
+                content: '\e900';
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                font-family: icomoon;
+                color: #FF647C;
+              }
             }
         }
         .size {
