--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -78,7 +78,7 @@ form::ng-deep {
   }
   .mat-form-field-invalid {
     .mat-form-field-outline-thick > div {
-      border-color: #FF647C;
+      border-color: #ff647c;
     }
   }
 
@@ -172,8 +172,6 @@ form::ng-deep {
   }
 
   .service-selects {
-
-
     .mat-form-field {
       &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
         transform: none;
@@ -264,7 +262,7 @@ form::ng-deep {
       font-size: 14px;
       line-height: 18px;
       text-align: right;
-      color: #33596E;
+      color: #33596e;
       opacity: 0.5;
       display: inherit;
       margin: 6px 0 26px;
@@ -311,7 +309,8 @@ form::ng-deep {
     font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 13px;
+    letter-spacing: 0.6px;
     line-height: 20px;
     color: #323c47;
   }
@@ -321,14 +320,14 @@ form::ng-deep {
 .items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: end;
   .img-item {
     width: 198px;
     height: 198px;
     margin-right: 3%;
     margin-bottom: 20px;
     position: relative;
-    button.delete-file {
+    div.delete-file {
       position: absolute;
       height: 24px;
       width: 24px;
@@ -347,6 +346,8 @@ form::ng-deep {
         content: "\e900";
         font-size: 18px;
         font-family: "icomoon";
+        top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
         color: red;
       }
@@ -373,7 +374,8 @@ form::ng-deep {
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
-      font-size: 14px;
+      letter-spacing: 1.5px;
+      font-size: 13px;
       line-height: 20px;
       text-align: center;
       text-transform: uppercase;
@@ -454,6 +456,11 @@ form::ng-deep {
       letter-spacing: -0.0841176px;
       margin-bottom: 7px;
     }
+
+    .dr-dr-text {
+      color: #33596e;
+      opacity: 0.5;
+    }
   }
 }
 
@@ -496,6 +503,7 @@ form::ng-deep {
     border: none;
     border-radius: 4px;
     font-weight: 700;
+    letter-spacing: 1.5px;
     font-size: 14px;
     line-height: 18px;
     // color: #4285F4;
@@ -529,13 +537,13 @@ form::ng-deep {
 }
 
 @media (max-width: 1499px) {
-  .step-wrapper > form{
+  .step-wrapper > form {
     width: 100%;
   }
-    // ---------------------------file upload form ---------------------------
+  // ---------------------------file upload form ---------------------------
   .items {
     justify-content: flex-start;
-    .img-item{
+    .img-item {
       margin-right: auto;
     }
   }
@@ -543,7 +551,7 @@ form::ng-deep {
     button {
       font-size: 13px;
       padding: 10px 24px;
-      &:first-of-type{
+      &:first-of-type {
         padding: 10px 24px;
       }
     }
