--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
@@ -139,6 +139,10 @@
     font-weight: 400;
     line-height: 1.125;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    &.required{
+      background-color: #fff;
+      z-index: 9;
+    }
   }
   .succes-message{
     position: absolute;
