--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -198,6 +198,7 @@
       margin-right: 17px;
       position: relative;
       cursor: pointer;
+      z-index: 10;
       &.tooltip {
         opacity: 1;
         &:before {
