--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -216,12 +216,21 @@
       height: 107px;
       border-radius: 50%;
       margin-bottom: 8px;
-      overflow: hidden;
+      position: relative;
       img {
         height: 100%;
         width: 100%;
         object-fit: cover;
+        border-radius: 50%;
       }
+    }
+    &-aura{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 160%;
+      height: 160%;
     }
   }
 
@@ -530,7 +539,7 @@
     width: 100%;
     max-width: 275px;
     position: fixed;
-    z-index: 7;
+    z-index: 9;
     transition: all .3s ease-out;
     .avatar {
       // img{
