--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/line-chart-dashboard/line-chart-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/line-chart-dashboard/line-chart-dashboard.component.html
@@ -1,3 +1,3 @@
-<canvas baseChart [datasets]="lineChartData" width='310px' height='192px' [labels]="chartLabels"
+<canvas baseChart [datasets]="lineChartData" width="385px" height="280px" [labels]="chartLabels"
 [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
 [plugins]="lineChartPlugins"></canvas>
