--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   height: 100%;
   overflow: auto;
+  background-color: #F1F2F4;
+  border-radius: 5px;
 }
 .main-statistic {
   display: flex;
@@ -110,7 +112,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      min-width: 390px;
+      width: calc(30% - 20px);
       .chart-body {
         display: flex;
         flex-direction: column;
@@ -194,12 +196,15 @@
       }
     }
     .request-settings {
-      min-width: 390px;
+      width: calc(30% - 20px);
       .chart {
-        padding: 60px 25px 35px 25px;
+        padding: 60px 0 35px 0;
+        display: flex;
+        justify-content: center;
       }
     }
     .pie-chart {
+      width: calc(20% - 20px);
       h5 {
         margin-bottom: 35px;
       }
@@ -292,7 +297,7 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 21px rgba(128, 152, 213, 0.074983);
     border-radius: 4px;
-    min-width: 285px;
+    width: calc(20% - 10px);
     box-sizing: border-box;
     margin-right: 17px;
     h5 {
@@ -543,6 +548,7 @@
     }
   }
   .charst-statistic {
+    margin-left: 17px;
     .charts {
       position: relative;
       &>div {
@@ -556,6 +562,7 @@
       .freelancer-status {
         min-width: 280px;
         height: 100%;
+        width: 70%;
         .status-toggle-block {
           p {
             margin: 20px 0 14px;
@@ -566,14 +573,16 @@
         width: 100%;
         margin: 0 15px;
         .chart {
-          padding: 35px 30px 20px 30px;
+          padding: 35px 0px 20px 0px;
+          display: flex;
+          justify-content: center;
         }
       }
       .pie-chart {
         margin-top: 53px;
         margin-right: 17px;
         width: auto;
-        min-width: 330px;
+        min-width: 310px;
         h5 {
           display: none;
         }
@@ -596,7 +605,7 @@
         top: 0;
         right: 17px;
         width: auto;
-        min-width: 315px;
+        min-width: 310px;
         height: 46px;
 
         button{
@@ -637,7 +646,7 @@
     }
     .statistic {
       margin-top: 53px;
-      min-width: 315px;
+      min-width: 310px;
       width: auto;
       margin-right: 17px;
       h5 {
