--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="btns-wrapper">
         </div>
-        <div class="done-message__close" (click)="closeErrorMessage()"></div>
+        <div class="done-message__close" (click)="closePopUp()"></div>
     </div>
 </div>
   
